# uniswap-v4-hookathon

./: .gitmodules  Readme.md
axiom/: .gitignore  Cargo.toml  README.md  rustfmt.toml
axiom/data/: config.json  inputs.json
axiom/src/: fixed.rs  fixedpoint.rs  input.rs  main.rs  utils.rs  volatility.rs
nexus/: .gitignore  Cargo.toml
nexus/src/: common.rs  main.rs  prove.rs  prover.rs  ticks.rs  volatility.rs  watcher.rs
nexus/src/guest/: Cargo.toml  rust-toolchain.toml
nexus/src/guest/src/: data.rs  main.rs
realized_volatility_prover/program/: Cargo.toml
realized_volatility_prover/program/elf/: riscv32im-succinct-zkvm-elf
realized_volatility_prover/program/src/: main.rs
realized_volatility_prover/script/: Cargo.toml
realized_volatility_prover/script/src/: main.rs
snt/: .gitignore  Cargo.toml  README.md
snt/src/: main.rs
sp1/rv_price/program/: Cargo.toml  Readme.md
sp1/rv_price/program/elf/: riscv32im-succinct-zkvm-elf
sp1/rv_price/program/src/: main.rs
sp1/rv_price/script/: Cargo.toml  Readme.md
sp1/rv_price/script/src/: main.rs
sp1/rv_ticks/fixtures/: fixture.json
sp1/rv_ticks/program/: Cargo.toml
sp1/rv_ticks/program/elf/: riscv32im-succinct-zkvm-elf
sp1/rv_ticks/program/src/: data.rs  main.rs
sp1/rv_ticks/script/: Cargo.toml  build.rs
sp1/rv_ticks/script/src/: build_elf.rs  main.rs  prove.rs  ticks_8192.csv  watcher.rs
