[workspace]
[package]
version = "0.1.0"
name = "realized_volatility_prover-script"
edition = "2021"

[dependencies]
clap = "4.5.4"
fixed = "1.27.0"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.0-testnet" }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.0-testnet"  }