[workspace]
[package]
version = "0.1.0"
name = "realized_volatility_prover-script"
edition = "2021"

[dependencies]
clap = "4.5.4"
fixed = "1.27.0"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.5-testnet", features = ["plonk"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tracing = "0.1.40"
alloy-sol-types = "0.7.2"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.5-testnet"  }
