[workspace]
[package]
version = "0.1.0"
name = "realized_volatility_prover-script"
edition = "2021"

[dependencies]
clap = "4.5.4"
fixed = "1.27.0"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.5-testnet", features = ["plonk"] }
serde_json = "1.0.117"
serde = { version = "1.0", default-features = false, features = ["derive", "serde_derive"] }
tracing = "0.1.40"
alloy-sol-types = "0.7.2"
rand_distr = "0.4.3"
rand = "0.8.5"
csv = "1.3.0"
thiserror = "1.0.61"
anyhow = "1.0.86"
chrono = "0.4.38"
cargo_metadata = "0.18.1"
notify = "6.1.1"
regex = "1.10.5"
jsonl = "4.0.1"

[build-dependencies]
csv = "1.3.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["serde_derive"] }
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.5-testnet"  }

[dev-dependencies]
rand = "0.8.5"
rtest = "0.2.1"
